Optimize board pagination and review search